--- a/client/assets/responsive.css
+++ b/client/assets/responsive.css
@@ -22,6 +22,7 @@
 
 	p {
 		font-size: medium !important;
+		font-weight: lighter !important;
 	}
 }
 
@@ -44,7 +45,7 @@
 	}
 
 	h5 {
-		font-size: x-large !important;
+		font-size: larger !important;
 	}
 
 	p {
@@ -72,7 +73,7 @@
 	}
 
 	h5 {
-		font-size: large !important;
+		font-size: larger !important;
 	}
 
 	p {
@@ -156,6 +157,11 @@
 	}
 
 	p {
-		font-size: x-small !important;
+		font-size: 12px !important;
+		line-height: 12px;
+	}
+
+	.text-caption {
+		line-height: 12px;
 	}
 }
