--- a/client/assets/transition.css
+++ b/client/assets/transition.css
@@ -18,7 +18,7 @@
 
 /* !--------------------------------- */
 .slide-card-enter-active {
-	transition: all 0.3s ease-out;
+	transition: all 0.5s ease-out;
 }
 
 .slide-card-leave-active {
@@ -41,7 +41,7 @@
 
 /* !--------------------------------- */
 .slide-down-enter-active {
-	transition: all 0.3s ease-out !important;
+	transition: all 0.5s ease-out !important;
 }
 
 .slide-down-leave-active {
@@ -50,7 +50,7 @@
 
 .slide-down-enter-from,
 .slide-down-leave-to {
-	transform: translateY(-30px) !important;
+	transform: translateY(-70px) !important;
 	opacity: 0 !important;
 }
 
@@ -60,7 +60,7 @@
 
 /* !--------------------------------- */
 .slide-up-enter-active {
-	transition: all 0.3s ease-out !important;
+	transition: all 0.5s ease-out !important;
 }
 
 .slide-up-leave-active {
@@ -69,6 +69,44 @@
 
 .slide-up-enter-from,
 .slide-up-leave-to {
-	transform: translateY(30px) !important ;
+	transform: translateY(70px) !important ;
+	opacity: 0 !important;
+}
+
+/* !--------------------------------- */
+
+/* !            slide left           */
+
+/* !--------------------------------- */
+.slide-left-enter-active {
+	transition: all 0.5s ease-out !important;
+}
+
+.slide-left-leave-active {
+	transition: all 0.6s cubic-bezier(1, 0.5, 0.8, 1) !important;
+}
+
+.slide-left-enter-from,
+.slide-left-leave-to {
+	transform: translateX(70px) !important ;
+	opacity: 0 !important;
+}
+
+/* !--------------------------------- */
+
+/* !            slide right	          */
+
+/* !--------------------------------- */
+.slide-right-enter-active {
+	transition: all 0.5s ease-out !important;
+}
+
+.slide-right-leave-active {
+	transition: all 0.6s cubic-bezier(1, 0.5, 0.8, 1) !important;
+}
+
+.slide-right-enter-from,
+.slide-right-leave-to {
+	transform: translateX(-70px) !important ;
 	opacity: 0 !important;
 }
